fix song link vertical alignment

--- a/less/app.less
+++ b/less/app.less
@@ -862,7 +862,7 @@ h1,h2,h3,h4,h5,h6 {
 				position: absolute;
 				top: 0;
 				left: 0;
-				padding: 1rem;
+				padding: 1.5rem;
 				width: 100%;
 				#gradient > .vertical(@start-color: rgba(0,0,0,0.9); @end-color: transparent;);
 			}
@@ -1137,7 +1137,7 @@ h1,h2,h3,h4,h5,h6 {
 	font-size: @font-size-base * 0.785;
 	font-weight: normal;
 	text-transform: uppercase;
-	line-height: @font-size-base * 1.5;
+	line-height: @font-size-base * 1.7;
 	vertical-align: middle;
 	color: @gray-light;
 
@@ -1189,7 +1189,7 @@ h1,h2,h3,h4,h5,h6 {
 		font-size: @font-size-base * 0.785;
 		font-weight: normal;
 		text-transform: uppercase;
-		line-height: 1.5rem;
+		line-height: 1.7rem;
 		padding-right: 1rem;
 		vertical-align: top;
 
